--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+goenvtemplator (1.1.0) UNRELEASED; urgency=medium
+
+  * Table driven tests.
+  * Removed hard coded env key from key.
+
+ -- Tomas Dohnalek <tomas.dohnalek@firma.seznam.cz>  Wed, 23 Nov 2016 15:23:48 +0100
+
 goenvtemplator (1.0.0) testing; urgency=medium
 
   * Initial release.
