chore: switch to go mod from glide, upgrade to go1.16
Signed-off-by: Martin Chodur <m.chodur@seznam.cz>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+goenvtemplator (2.1.0) UNRELEASED; urgency=medium
+
+  * Upgrade to go 1.16
+  * Migrated from `glide` to `go mod`
+
+ -- Martin Chodur <martin.chodur@firma.seznam.cz>  Wed, 11 Aug 2021 13:56:32 +0200
+
 goenvtemplator (2.0.0) Seznam; urgency=medium
 
   * Release bump; see all rc changelogs to see changes since v1.
