--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-goenvtemplator (2.1.0) UNRELEASED; urgency=medium
+goenvtemplator (2.1.0) Seznam; urgency=medium
 
   * Upgrade to go 1.16
   * Migrated from `glide` to `go mod`
   * Upgrade sprig library to 2.22.0
   * Allow file paths to be relative
 
- -- Martin Chodur <martin.chodur@firma.seznam.cz>  Wed, 11 Aug 2021 13:56:32 +0200
+ -- Martin Chodur <martin.chodur@firma.seznam.cz>  Wed, 18 Aug 2021 15:34:22 +0200
 
 goenvtemplator (2.0.0) Seznam; urgency=medium
 
